--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -23,7 +23,7 @@
                 <p style="color: green;" class="eg">(CA 1234, CL 123-456, CF 12345, CJ 123-4)</p>
                 <div class="btns">
                     <button class="add-btn" type="submit">Add</button>
-                    <button class="clear-btn">Clear</button>
+                    {{!-- <button class="clear-btn">Clear</button> --}}
                 </div>
             </form>
         </div>
