--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -23,7 +23,7 @@
                 <p style="color: green;" class="eg">(CA 1234, CL 123-456, CF 12345, CJ 123-4)</p>
                 <div class="btns">
                     <button class="add-btn" type="submit">Add</button>
-                    {{!-- <button class="clear-btn">Clear</button> --}}
+                    <button class="clear-btn" type="button">Clear</button>
                 </div>
             </form>
         </div>
@@ -51,9 +51,32 @@
 </body>
 <script defer>
     let errorEl = document.querySelector('.error');
+    const clearBtn = document.querySelector('.clear-btn');
 
     setTimeout(() =>{
         errorEl.style.display = 'none';
     }, 2000);
+
+    clearBtn.addEventListener('click', async function () {
+            const userConfirmed = window.confirm("Are you sure you want to clear registration numbers?");
+            if (userConfirmed) {
+                try {
+                    const response = await fetch('/reg_numbers/clear', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        }
+                    });
+
+                    if (response.ok) {
+                        const result = await response.text();
+                        //console.log(result);
+                        location.reload();
+                    }
+                } catch (error) {
+                    console.error('An error occurred:', error);
+                }
+            }
+        });
 </script>
 </html>
